sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:18: error: not found: value j
  echange(j:Int,minpos);
          ^